yaml/ingress/gateway-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  namespace: springcloud
  annotations:
    serverPort: "80"
spec:
  rules:
    http:
      paths:
        path: /
        backend:
          serviceName: gatway
          servicePort: 4000
